# buck

./: .gitignore  README.md  buck.yaml  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  static  tsconfig.json  webpack.config.js
buck/: alembic.ini  app.py  endpoints.py  index.py  models.py  tools.py
buck/alembic/: env.py
buck/alembic/versions/: 0ab7662e5980_add_sound_file.py  2c31c1758946_add_setnull_ondelete.py  563a74a5ef42_.py  bf9a71a1e01f_initial.py  e7efe6fcbb66_.py
buck/api/: models.py  running_timers.py  schema.py  tools.py  types.py
buck/api/nodes/: delete_group.py  delete_predefined_timer.py  groups.py  operate_timer.py  predefine_timer.py  predefined_timers.py  save_group.py  save_predefined_timer.py  save_timer.py  start_timer.py  timer_events.py  timers.py
buck/auto_rpi_backlight/: app.py  controller.py
buck/celery/: app.py  factory.py  scheduler.py  tasks.py  tools.py
buck/components/: asgi_subscription_server.py  auto_rpi_backlight.py  broker.py  config.py  database.py  folders.py  graphene_pydantic.py  injection_middleware.py  keys.py  node_base.py  redis.py  settings.py  subscription_app.py  weather_provider.py
buck/static/: index.css
buck/templates/: admin.jinja2  index.jinja2  rpi-kiosk.jinja2
buck/tests/unit/: assets.py  test_tools.py
deploy/playbooks/: full.yaml
deploy/tasks/: install-app.yaml
frontend/: App.tsx  actions.ts  admin.tsx  codegen.yml  graphql-types-and-hooks.tsx  hooks.ts  index.tsx  queries.graphql  reducers.ts  rpiKiosk.tsx  store.ts  tools.ts  translations.ts  translations.tsx  types.ts
frontend/apollo-client/: errors.ts  factory.ts
frontend/components/: App.tsx  Clock.tsx  ConfirmDeleteButton.tsx  ConfirmDialog.tsx  DialogActionButtons.tsx  GroupSelectInput.tsx  QuickStartPicker.tsx  SavePredefinedTimerDialog.tsx  SimpleTimerList.tsx  SoundSelector.tsx  TextField.tsx  dialogs.tsx  forms.tsx  tools.tsx  translations.tsx  widgets.tsx
frontend/components/keyboard/: Key.tsx  Keyboard.tsx  TextFieldDialog.tsx  layouts.ts  types.ts
frontend/components/virtual-keyboard/: Key.tsx  (+4 more)
frontend/contexts/: config.tsx  layoutSettings.ts
frontend/forms/: formErrorHelper.ts
frontend/index/: App.tsx  MainFrame.tsx
frontend/layouts/: LayoutRouter.tsx
frontend/rpi-kiosk/: ActiveAlarmPage.tsx  ActiveTimerDialog.tsx  App.tsx  ConfirmDeleteButton.tsx  ConfirmDialog.tsx  DialogList.tsx  FormattedTableHead.tsx  GroupSelectInput.tsx  Kiosk.tsx  RunningTimer.tsx  SavePredefinedTimerDialog.tsx  SoundSelector.tsx  TimerHistoryDialog.tsx  dialogs.tsx  forms.tsx  hooks.ts  queries.ts  timerOperationMutation.ts  tools.ts  types.ts  widgets.tsx
frontend/translations/: en.ts  tools.spec.ts  tools.ts
tasks/: __init__.py  assets.py  celery.py  start.py  top.py  typescript.py
(+123 files in other folders)
