[tool.poetry]
name = "buck"
version = "0.1.0"
description = "The most advanced timer ecosystem in the history"
authors = ["Lajos Santa <santa.lajos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = "^0.12.2"
aiofiles = "^0.6.0"
graphene = "^2.1.8"
pydantic = "^1.7.2"
Jinja2 = "^2.11.2"
configpp = "^0.5.0"
SQLAlchemy = "1.4.0b1"
asyncpg = "^0.21.0"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
graphene-sqlalchemy = "^2.3.0"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
