[tool.poetry]
name = "buck"
version = "0.7.1"
description = "The most advanced timer ecosystem in the history"
authors = ["Lajos Santa <santa.lajos@gmail.com>"]
include = [
    "buck/static/js/bundle.js",
    "buck/static/audio/*"
]

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.14.1"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
aiofiles = "^0.6.0"
graphene = "^2.1.8"
pydantic = "^1.7.2"
Jinja2 = "^2.11.2"
SQLAlchemy = "1.4.0b1"
asyncpg = "^0.21.0"
alembic = "^1.4.3"
psycopg2 = "^2.8.6"
graphene-sqlalchemy = "^2.3.0"
pytimeparse = "^1.1.8"
celery = {extras = ["redis"], version = "^5.0.2"}
aioredis = "^1.3.1"
graphql-ws = "^0.3.1"
rpi-backlight = "^2.2.0"
psutil = "^5.8.0"
gpiozero = "^1.5.1"
httpx = "^0.16.1"
adafruit-circuitpython-veml7700 = "^1.1.3"
"ruamel.yaml" = "^0.16.12"

[tool.poetry.dev-dependencies]
invoke = "^1.4.1"
pytest = "^6.1.2"
pytest-watch = "^4.2.0"
rpi-backlight-emulator = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
auto-rpi-backlight = "buck.components.auto_rpi_backlight:main"
